--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'windows-2019'
 
 variables:
-  solution: '**/*.sln'
+  solution: '**/KL_Vendas/*.sln'
   buildPlatform: 'AnyCPU'
   buildConfiguration: 'Release'
 
