--- a/KL_Vendas/KL_API/KL_API.csproj
+++ b/KL_Vendas/KL_API/KL_API.csproj
@@ -259,6 +259,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\LicenseActivationController.cs" />
     <Compile Include="Controllers\LicenseCancelController.cs" />
+    <Compile Include="Controllers\ActivationController.cs" />
     <Compile Include="Controllers\UserAddController.cs" />
     <Compile Include="Controllers\UserDeleteController.cs" />
     <Compile Include="Global.asax.cs">
