--- a/KL_Vendas/KL_API/KL_API.csproj
+++ b/KL_Vendas/KL_API/KL_API.csproj
@@ -257,6 +257,10 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\AtivarLicenca.cs" />
+    <Compile Include="Controllers\InserirProviderInfo.cs" />
+    <Compile Include="Controllers\DeletarProviderInfo.cs" />
+    <Compile Include="Controllers\GetProviderInfo.cs" />
     <Compile Include="Controllers\LicenseActivationController.cs" />
     <Compile Include="Controllers\LicenseCancelController.cs" />
     <Compile Include="Controllers\ActivationController.cs" />
