--- a/KL_Vendas/KL_API/Web.config
+++ b/KL_Vendas/KL_API/Web.config
@@ -11,6 +11,7 @@
 		<add key="MK_WSMKUserSenhaSAC" value="http://mk.seatelecom.com.br:8080/mk/WSMKUserSenhaSAC.rule?sys=" />
 		<add key="MK_WSMKContratosPorCliente" value="http://mk.seatelecom.com.br:8080/mk/WSMKContratosPorCliente.rule?sys=" />
 		<add key="MK_WSMKConexoesPorCliente" value="http://mk.seatelecom.com.br:8080/mk/WSMKConexoesPorCliente.rule?sys=" />
+		<add key="MK_WSMKPlanosAcesso" value="http://mk.seatelecom.com.br:8080/mk/WSMKPlanosAcesso.rule?sys=" />
 	</appSettings>
 	<connectionStrings>
 		<add name="ConnUOL" connectionString="server=35.232.96.49;database=db_itailers;uid=sqlserver;password=Sup3rM4n;" />
