--- a/KL_Vendas/KL_API/KL_API.csproj
+++ b/KL_Vendas/KL_API/KL_API.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AtivarLicenca.cs" />
+    <Compile Include="Controllers\GerenciaLicencaMK.cs" />
     <Compile Include="Controllers\GetProdutos.cs" />
     <Compile Include="Controllers\InserirProviderInfo.cs" />
     <Compile Include="Controllers\DeletarProviderInfo.cs" />
