--- a/KL_Vendas/API_Licencas/API_Licencas.csproj
+++ b/KL_Vendas/API_Licencas/API_Licencas.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Helper.cs" />
     <Compile Include="Models\KL_Licenca_Hard_Cancel.cs" />
     <Compile Include="Models\KL_Neo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
