--- a/KL_Vendas/KL_API/KL_API.csproj
+++ b/KL_Vendas/KL_API/KL_API.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AtivarLicenca.cs" />
+    <Compile Include="Controllers\Integracao\ProcessamentoController.cs" />
     <Compile Include="Controllers\Provisionado\GerenciaLicencaController.cs" />
     <Compile Include="Controllers\SolicitarLicencas.cs" />
     <Compile Include="Controllers\GetProdutos.cs" />
@@ -276,6 +277,12 @@
     </Compile>
     <Compile Include="Models\AddRequiredHeaderParameter .cs" />
     <Compile Include="Models\Ativacao_Obj.cs" />
+    <Compile Include="Models\Integracao\cliente.cs" />
+    <Compile Include="Models\Integracao\cliente_contrato.cs" />
+    <Compile Include="Models\Integracao\Entidades\t_integracao_ativacao.cs" />
+    <Compile Include="Models\Integracao\Entidades\t_integracao_cliente.cs" />
+    <Compile Include="Models\Integracao\Entidades\t_integracao_usuario.cs" />
+    <Compile Include="Models\Integracao\view_vd_contratos_produtos_gen.cs" />
     <Compile Include="Models\SolicitarLicencas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
