--- a/KL_Vendas/KL_API/KL_API.csproj
+++ b/KL_Vendas/KL_API/KL_API.csproj
@@ -258,6 +258,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AtivarLicenca.cs" />
+    <Compile Include="Controllers\Integracao\IntegracaoProdutosController.cs" />
+    <Compile Include="Controllers\Integracao\IntegracaoLoginController.cs" />
     <Compile Include="Controllers\Integracao\ProcessamentoController.cs" />
     <Compile Include="Controllers\Provisionado\GerenciaLicencaController.cs" />
     <Compile Include="Controllers\SolicitarLicencas.cs" />
@@ -282,6 +284,7 @@
     <Compile Include="Models\Integracao\Entidades\t_integracao_ativacao.cs" />
     <Compile Include="Models\Integracao\Entidades\t_integracao_cliente.cs" />
     <Compile Include="Models\Integracao\Entidades\t_integracao_usuario.cs" />
+    <Compile Include="Models\Integracao\Integracao.cs" />
     <Compile Include="Models\Integracao\view_vd_contratos_produtos_gen.cs" />
     <Compile Include="Models\SolicitarLicencas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
