--- a/KL_Vendas/KL_API/KL_API.csproj
+++ b/KL_Vendas/KL_API/KL_API.csproj
@@ -257,7 +257,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\api\ApiEmailsEnviar.cs" />
+    <Compile Include="Controllers\api\ApiEmailsEnviar15.cs" />
+    <Compile Include="Controllers\api\ApiEmailsEnviarSemanal.cs" />
     <Compile Include="Controllers\AtivarLicenca.cs" />
     <Compile Include="Controllers\Integracao\IntegracaoKasperskyController.cs" />
     <Compile Include="Controllers\Integracao\IntegracaoRelatorioAtivacoesController.cs" />
