--- a/KL_Vendas/KL_API/KL_API.csproj
+++ b/KL_Vendas/KL_API/KL_API.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Controllers\AtivarLicenca.cs" />
     <Compile Include="Controllers\GetProdutosClienteController.cs" />
     <Compile Include="Controllers\GetUsersInfo.cs" />
+    <Compile Include="Controllers\Integracao\IntegracaoVoaController.cs" />
     <Compile Include="Controllers\Integracao\IntegracaoKasperskyController.cs" />
     <Compile Include="Controllers\Integracao\IntegracaoRelatorioAtivacoes2Controller.cs" />
     <Compile Include="Controllers\Integracao\IntegracaoRelatorioAtivacoesController.cs" />
