--- a/KL_Vendas/API_Licencas/Web.config
+++ b/KL_Vendas/API_Licencas/Web.config
@@ -39,8 +39,8 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://test.kss.kaspersky-labs.com:443/soap/upi" binding="basicHttpBinding" bindingConfiguration="KasperskySubscriptionServiceBinding" contract="KL_API.KasperskySubscriptionServicePortType" name="KasperskySubscriptionServiceSoap" />
-      <endpoint address="https://test.kss.kaspersky-labs.com:443/soap/upi" binding="basicHttpBinding" bindingConfiguration="KasperskySubscriptionServiceBinding" contract="BLL.KasperskySubscriptionServicePortType" name="KasperskySubscriptionServiceSoap" />
+      <endpoint address="https://api.kss.kaspersky.com/soap/upi" binding="basicHttpBinding" bindingConfiguration="KasperskySubscriptionServiceBinding" contract="KL_API.KasperskySubscriptionServicePortType" name="KasperskySubscriptionServiceSoap" />
+      <endpoint address="https://api.kss.kaspersky.com/soap/upi" binding="basicHttpBinding" bindingConfiguration="KasperskySubscriptionServiceBinding" contract="BLL.KasperskySubscriptionServicePortType" name="KasperskySubscriptionServiceSoap" />
     </client>
   </system.serviceModel>
   <runtime>
