--- a/KL_Vendas/KL_API/KL_API.csproj
+++ b/KL_Vendas/KL_API/KL_API.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Controllers\AtivarLicenca.cs" />
     <Compile Include="Controllers\GetProdutosClienteController.cs" />
     <Compile Include="Controllers\GetUsersInfo.cs" />
+    <Compile Include="Controllers\Integracao\IntegracaoHardCancelLoteController.cs" />
     <Compile Include="Controllers\Integracao\IntegracaoVoaController.cs" />
     <Compile Include="Controllers\Integracao\IntegracaoKasperskyController.cs" />
     <Compile Include="Controllers\Integracao\IntegracaoRelatorioAtivacoes2Controller.cs" />
@@ -270,6 +271,7 @@
     <Compile Include="Controllers\Integracao\IntegracaoLoginController.cs" />
     <Compile Include="Controllers\Integracao\IntegracaoEmailsController.cs" />
     <Compile Include="Controllers\Integracao\IntegracaoController.cs" />
+    <Compile Include="Controllers\New\HardCancelLoteController.cs" />
     <Compile Include="Controllers\New\ReActivationController.cs" />
     <Compile Include="Controllers\New\ActivationController.cs" />
     <Compile Include="Controllers\New\GetUsers.cs" />
