--- a/KL_Vendas/KL_API/Web.config
+++ b/KL_Vendas/KL_API/Web.config
@@ -34,8 +34,8 @@
 			</basicHttpBinding>
 		</bindings>
 		<client>
-			<endpoint address="https://america.kss.kaspersky-labs.com/soap/upi" binding="basicHttpBinding" bindingConfiguration="KasperskySubscriptionServiceBinding" contract="KL_API.KasperskySubscriptionServicePortType" name="KasperskySubscriptionServiceSoap" />
-			<endpoint address="https://america.kss.kaspersky-labs.com/soap/upi" binding="basicHttpBinding" bindingConfiguration="KasperskySubscriptionServiceBinding" contract="BLL.KasperskySubscriptionServicePortType" name="KasperskySubscriptionServiceSoap" />
+			<endpoint address="https://api.kss.kaspersky.com/soap/upi" binding="basicHttpBinding" bindingConfiguration="KasperskySubscriptionServiceBinding" contract="KL_API.KasperskySubscriptionServicePortType" name="KasperskySubscriptionServiceSoap" />
+			<endpoint address="https://api.kss.kaspersky.com/soap/upi" binding="basicHttpBinding" bindingConfiguration="KasperskySubscriptionServiceBinding" contract="BLL.KasperskySubscriptionServicePortType" name="KasperskySubscriptionServiceSoap" />
 		</client>
 	</system.serviceModel>
   <runtime>
